crates/pg_syntax/tests/snapshots/postgres_regress/inet@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '127.0.0.1'::inet + 257;"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    AExpr@7..30
      TypeCast@7..24
        AConst@7..18
          Sconst@7..18 "'127.0.0.1'"
        Typecast@18..20 "::"
        TypeName@20..24
          Ident@20..24 "inet"
      Whitespace@24..25 " "
      Ascii43@25..26 "+"
      Whitespace@26..27 " "
      AConst@27..30
        Iconst@27..30 "257"
  Ascii59@30..31 ";"

