crates/pg_syntax/tests/snapshots/postgres_regress/inet@89.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ('127.0.0.1'::inet + 257) - 257;"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    Ascii40@7..8 "("
    AExpr@8..38
      AExpr@8..31
        TypeCast@8..25
          AConst@8..19
            Sconst@8..19 "'127.0.0.1'"
          Typecast@19..21 "::"
          TypeName@21..25
            Ident@21..25 "inet"
        Whitespace@25..26 " "
        Ascii43@26..27 "+"
        Whitespace@27..28 " "
        AConst@28..31
          Iconst@28..31 "257"
      Ascii41@31..32 ")"
      Whitespace@32..33 " "
      Ascii45@33..34 "-"
      Whitespace@34..35 " "
      AConst@35..38
        Iconst@35..38 "257"
  Ascii59@38..39 ";"

