crates/pg_syntax/tests/snapshots/postgres_regress/inet@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '127::1'::inet + 257;"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..27
    AExpr@7..27
      TypeCast@7..21
        AConst@7..15
          Sconst@7..15 "'127::1'"
        Typecast@15..17 "::"
        TypeName@17..21
          Ident@17..21 "inet"
      Whitespace@21..22 " "
      Ascii43@22..23 "+"
      Whitespace@23..24 " "
      AConst@24..27
        Iconst@24..27 "257"
  Ascii59@27..28 ";"

