crates/pg_syntax/tests/snapshots/postgres_regress/inet@91.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ('127::1'::inet + 257) - 257;"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    Ascii40@7..8 "("
    AExpr@8..35
      AExpr@8..28
        TypeCast@8..22
          AConst@8..16
            Sconst@8..16 "'127::1'"
          Typecast@16..18 "::"
          TypeName@18..22
            Ident@18..22 "inet"
        Whitespace@22..23 " "
        Ascii43@23..24 "+"
        Whitespace@24..25 " "
        AConst@25..28
          Iconst@25..28 "257"
      Ascii41@28..29 ")"
      Whitespace@29..30 " "
      Ascii45@30..31 "-"
      Whitespace@31..32 " "
      AConst@32..35
        Iconst@32..35 "257"
  Ascii59@35..36 ";"

